feat: modify request params
