# swagger.json
@@ -24,41 +24,34 @@
     "*/*"
   ],
   "paths": {
-    "/flow/flowReProcessUser/queryApprover": {
-      "post": {
+    "/flow/flowReField/getField": {
+      "get": {
         "tags": [
-          "用户端-审批已发起流程信息表-静态"
+          "用户端-字段定义-静态"
         ],
-        "summary": "发起人通过流程ID与节点ID查询审批人信息(发起人自选数据)",
-        "operationId": "queryApproverUsingPOST",
-        "consumes": [
-          "application/json"
-        ],
+        "summary": "表单字段定义查询-静态数据",
+        "operationId": "getFieldUsingGET",
         "produces": [
           "*/*"
         ],
         "parameters": [
           {
-            "in": "body",
-            "name": "queryApproverDto",
-            "description": "queryApproverDto",
+            "name": "processId",
+            "in": "query",
+            "description": "流程id",
             "required": true,
-            "schema": {
-              "originalRef": "FlowReQueryApproverDto",
-              "$ref": "#/definitions/FlowReQueryApproverDto"
-            }
+            "type": "integer",
+            "format": "int64",
+            "allowEmptyValue": false
           }
         ],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
-              "originalRef": "R«List«NodeUserBaseVo»»",
-              "$ref": "#/definitions/R«List«NodeUserBaseVo»»"
+              "originalRef": "R«List«FlowReFieldVo»»",
+              "$ref": "#/definitions/R«List«FlowReFieldVo»»"
             }
-          },
-          "201": {
-            "description": "Created"
           },
           "401": {
             "description": "Unauthorized"
@@ -74,29 +67,7 @@
     }
   },
   "definitions": {
-    "FlowReQueryApproverDto": {
-      "type": "object",
-      "required": [
-        "nodeId",
-        "processId"
-      ],
-      "properties": {
-        "nodeId": {
-          "type": "integer",
-          "format": "int64",
-          "description": "node节点id",
-          "refType": null
-        },
-        "processId": {
-          "type": "integer",
-          "format": "int64",
-          "description": "流程id",
-          "refType": null
-        }
-      },
-      "title": "FlowReQueryApproverDto"
-    },
-    "R«List«NodeUserBaseVo»»": {
+    "R«List«FlowReFieldVo»»": {
       "type": "object",
       "properties": {
         "code": {
@@ -108,8 +79,8 @@
           "type": "array",
           "description": "返回值",
           "items": {
-            "originalRef": "NodeUserBaseVo",
-            "$ref": "#/definitions/NodeUserBaseVo"
+            "originalRef": "FlowReFieldVo",
+            "$ref": "#/definitions/FlowReFieldVo"
           }
         },
         "msg": {
@@ -117,35 +88,234 @@
           "description": "错误信息"
         }
       },
-      "title": "R«List«NodeUserBaseVo»»"
+      "title": "R«List«FlowReFieldVo»»"
     },
-    "NodeUserBaseVo": {
+    "FlowReFieldVo": {
       "type": "object",
+      "required": [
+        "type"
+      ],
       "properties": {
-        "approverId": {
-          "type": "integer",
-          "format": "int64",
-          "description": "审批人ID",
+        "auth": {
+          "type": "string",
+          "description": "权限标识情况(readOnly为只读;editable为可编辑;hidden为隐藏)",
           "refType": null
         },
-        "avatar": {
+        "code": {
           "type": "string",
-          "description": "头像",
+          "description": "套件默认系统字段code 不为空则说明是套件字段",
+          "refType": null
+        },
+        "dataConfig": {
+          "type": "boolean",
+          "description": "是否有数据配置",
+          "refType": null
+        },
+        "dataContext": {
+          "type": "array",
+          "description": "数据配置",
+          "items": {
+            "originalRef": "FlowGradeDataVo",
+            "$ref": "#/definitions/FlowGradeDataVo"
+          },
+          "refType": "FlowGradeDataVo"
+        },
+        "dateType": {
+          "type": "boolean",
+          "description": "日期是否为下拉 1是 0否",
+          "refType": null
+        },
+        "decimalNum": {
+          "type": "integer",
+          "format": "int32",
+          "description": "小数点位数值",
+          "refType": null
+        },
+        "defaultValue": {
+          "type": "string",
+          "description": "默认值",
+          "refType": null
+        },
+        "deptType": {
+          "type": "boolean",
+          "description": "是否展示部门类型 1是 0否",
+          "refType": null
+        },
+        "descTextVal": {
+          "type": "string",
+          "description": "说明文字值",
+          "refType": null
+        },
+        "enablePrint": {
+          "type": "boolean",
+          "description": "是否参与打印 1是 0否",
+          "refType": null
+        },
+        "format": {
+          "type": "string",
+          "description": "YMD年月日 YMDHS年月日时分",
+          "refType": null
+        },
+        "hasDecimal": {
+          "type": "boolean",
+          "description": "是否有小数点 1是 0否",
+          "refType": null
+        },
+        "hasDefault": {
+          "type": "boolean",
+          "description": "是否有默认值 1是 0否",
+          "refType": null
+        },
+        "hasDesc": {
+          "type": "boolean",
+          "description": "是否有说明文字 1是 0否",
+          "refType": null
+        },
+        "hasTitle": {
+          "type": "boolean",
+          "description": "是否有标题 1是 0否",
+          "refType": null
+        },
+        "hasUnit": {
+          "type": "boolean",
+          "description": "是否有单位 1是 0否",
           "refType": null
         },
         "id": {
           "type": "integer",
           "format": "int64",
-          "description": "用户Id",
+          "description": "主键",
+          "refType": null
+        },
+        "isShowOnScreen": {
+          "type": "boolean",
+          "description": "审批界面是否展示 1是 0否",
+          "refType": null
+        },
+        "isShowTitle": {
+          "type": "boolean",
+          "description": "是否展示标题 1是 0否",
+          "refType": null
+        },
+        "isValidate": {
+          "type": "boolean",
+          "description": "是否自动校验 1是 0否",
+          "refType": null
+        },
+        "kitType": {
+          "type": "string",
+          "description": "套件类型",
+          "refType": null
+        },
+        "multipleTitle": {
+          "type": "boolean",
+          "description": "是否多标题 1是 0否",
+          "refType": null
+        },
+        "options": {
+          "type": "array",
+          "description": "单选多选的选项",
+          "items": {
+            "type": "string"
+          },
+          "refType": "string"
+        },
+        "phoneType": {
+          "type": "string",
+          "description": "手机类型 phone手机",
+          "refType": null
+        },
+        "placeholder": {
+          "type": "boolean",
+          "description": "是否有提示文字 1是 0否",
+          "refType": null
+        },
+        "placeholderVal": {
+          "type": "string",
+          "description": "提示文字",
+          "refType": null
+        },
+        "required": {
+          "type": "boolean",
+          "description": "是否必填 1是 0否",
+          "refType": null
+        },
+        "selectType": {
+          "type": "string",
+          "description": "one选择一个 muti选择多个",
+          "refType": null
+        },
+        "showChinese": {
+          "type": "boolean",
+          "description": "是否转换为大小写 1是 0否",
+          "refType": null
+        },
+        "showLength": {
+          "type": "boolean",
+          "description": "是否自动计算时长 1是 0否",
+          "refType": null
+        },
+        "submitBehalfOfOthers": {
+          "type": "boolean",
+          "description": "是否代他人提交 false 否  true 是",
+          "refType": null
+        },
+        "titleValue": {
+          "type": "string",
+          "description": "字段名称",
+          "refType": null
+        },
+        "titleValues": {
+          "type": "array",
+          "description": "多标题值",
+          "items": {
+            "type": "string"
+          },
+          "refType": "string"
+        },
+        "type": {
+          "type": "string",
+          "description": "TextInput单行输入框 TextareaInput多行输入框 NumberInput数字输入框 SelectInput单选框 MultipleSelect多选框 Date日期 DateRange日期区间 Description说明文字 IDCard身份证 Phone电话 Money金额 Dept部门 Img图片 Attach附件 Concat联系人 Grade级联/分类",
+          "refType": null
+        },
+        "unitValue": {
+          "type": "string",
+          "description": "单位值",
+          "refType": null
+        }
+      },
+      "title": "FlowReFieldVo"
+    },
+    "FlowGradeDataVo": {
+      "type": "object",
+      "properties": {
+        "children": {
+          "type": "array",
+          "description": "子节点",
+          "items": {
+            "originalRef": "FlowGradeDataVo",
+            "$ref": "#/definitions/FlowGradeDataVo"
+          },
+          "refType": "FlowGradeDataVo"
+        },
+        "code": {
+          "type": "string",
+          "description": "分类编号",
+          "refType": null
+        },
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "description": "主键",
           "refType": null
         },
         "name": {
           "type": "string",
-          "description": "姓名",
+          "description": "分类名称",
           "refType": null
         }
       },
-      "title": "NodeUserBaseVo"
+      "title": "FlowGradeDataVo"
     }
   }
 }
